# cnft-nifs

./: .gitignore  Cargo.toml  README.md  mix.exs
lib/: cnftnifs.ex
native/cnftnifs/: Cargo.toml  README.md
native/cnftnifs/src/: constants.rs  lib.rs  serializable_merkle_tree.rs  utils.rs
test/: demo_test.exs
