[package]
name = "cnftnifs"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "cnftnifs"
crate-type = ["cdylib"]

[dependencies]
# bincode = "2.0.0"
bs58 = "0.5.1"
lazy_static = "1.5.0"
mpl-bubblegum = "1.4.0"
rustler = { version = "0.36.1", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "1.8.0"
solana-program = ">= 1.14"
solana-program-test = "^1.14"
solana-pubkey = "2.2.1"
solana-sdk = "^1.14"
spl-account-compression = { version = "0.3.1", features = ["no-entrypoint", "cpi"] }
spl-merkle-tree-reference = "0.1.0"
spl-noop = "0.2.0"
tokio = "1.43.0"
bincode = { workspace = true }
base64 = "0.22.1"
dirs = "6.0.0"
