[package]
name = "cnftnifs"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "cnftnifs"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
rustler = { version = "0.36.1", features = ["serde"] }
spl-account-compression = { version = "0.3.1", features = ["no-entrypoint", "cpi"] }
mpl-bubblegum = "1.4.0"
solana-program = "2.2.1"
solana-sdk = "1.18.18"
solana-client = "1.8.0"
spl-noop = "0.2.0"
serde_json = "1.0.140"
tokio = "1.43.0"
bs58 = "0.5.1"
